--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel=" icon " type="image/png" href="./Assets/icons/heart-pulse.png" />
 </head>
-<title>Medical Core</title>
+<title>Medical Care</title>
 
 </head>
 
@@ -22,7 +22,7 @@
     <div class="container header">
 
 
-      <h3 class="brand-name">Medical Core</h3>
+      <h3 class="brand-name">Medical Care</h3>
 
 
       <nav class="nav-links">
